--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,11 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+AMO_LOGIN=
+AMO_HASH=
+AMO_SUBDOMAIN=
+
+ZHIRKILLER_ADMIN_TOKEN=
+SENDPULSE_API_USER_ID=8e964cb667c05e773f9f6c8a7bca6465
+SENDPULSE_API_SECRET=218892de04f67ebbea3eb00230f8c9a1
