--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
+MAIL_USERNAME=
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
@@ -38,6 +38,8 @@ AMO_LOGIN=
 AMO_HASH=
 AMO_SUBDOMAIN=
 
+# For forms
 ZHIRKILLER_ADMIN_TOKEN=
+
 SENDPULSE_API_USER_ID=8e964cb667c05e773f9f6c8a7bca6465
 SENDPULSE_API_SECRET=218892de04f67ebbea3eb00230f8c9a1
