some changes for deployemnt to als, settings and webhooks"

--- a/.env.example
+++ b/.env.example
@@ -41,5 +41,5 @@ AMO_SUBDOMAIN=
 # For forms
 ZHIRKILLER_ADMIN_TOKEN=
 
-SENDPULSE_API_USER_ID=8e964cb667c05e773f9f6c8a7bca6465
-SENDPULSE_API_SECRET=218892de04f67ebbea3eb00230f8c9a1
+SENDPULSE_API_USER_ID=
+SENDPULSE_API_SECRET=
