--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-cors": "^0.11.0",
         "erjanmx/laravel-api-auth": "^0.1.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
